# make-llm-basic

./: .gitignore  README.md  fix_item_spaces.py  pyproject.toml
book/en/: main.tex
book/en/chapters/: appendix_a_math.tex  appendix_b_code.tex  appendix_c_faq.tex  appendix_d_answers.tex  appendix_e_preview.tex  ch01_intro.tex  ch02_setup.tex  ch03_tokenizer.tex  ch04_embedding.tex  ch05_attention.tex  ch06_transformer_block.tex  ch07_gpt_training.tex  ch08_generation.tex  ch09_wrapup.tex  cover.tex  glossary.tex  preface.tex
book/en/shared/: preamble.tex
book/ja/: main.tex
book/ja/chapters/: appendix_a_math.tex  appendix_b_code.tex  appendix_c_faq.tex  appendix_d_answers.tex  appendix_e_preview.tex  ch01_intro.tex  ch02_setup.tex  ch03_tokenizer.tex  ch04_embedding.tex  ch05_attention.tex  ch06_transformer_block.tex  ch07_gpt_training.tex  ch08_generation.tex  ch09_wrapup.tex  cover.tex  glossary.tex  preface.tex
book/ja/shared/: preamble.tex
book/ko/: main.tex
book/ko/chapters/: appendix_a_math.tex  appendix_b_code.tex  appendix_c_faq.tex  appendix_d_answers.tex  appendix_e_preview.tex  ch01_intro.tex  ch02_setup.tex  ch03_tokenizer.tex  ch04_embedding.tex  ch05_attention.tex  ch06_transformer_block.tex  ch07_gpt_training.tex  ch08_generation.tex  ch09_wrapup.tex  cover.tex  glossary.tex  preface.tex
docs/: publishing_guide.md
scripts/: tiny_train.py
src/makellm/: __init__.py
src/makellm_basic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_model.py  test_tokenizer.py  test_training.py
tools/: publish_book.py
(+22 files in other folders)
